# Hell

./: .gitconfig  .gitignore  CMakeLists.txt  README.md  gitconfig.alias
.github/workflows/: cmake-multi-platform.yml
Docs/: Features.txt  spec.txt
Src/: main.cpp
Src/language/: CMakeLists.txt  Lexer.cpp
Test/: CMakeLists.txt  TestParser.cpp
include/: Lexer.h
